package entity.base;

public interface Damagedable {
    void takeDamage(double amount);
}
