@startuml
abstract class entity.base.Character {
# double hp
# double maxHp
# boolean isDead
- {static} double DAMAGED_STATE_DURATION_S
- double damagedStateTimer
# boolean isAttacking
# double damageMultiplier
# double projectileScale
- ArrayList<StatusEffect> activeStatusEffects
+ void takeDamage(double)
+ Rectangle2D getHitBox()
+ void update(double)
+ void heal(int)
+ void toxic()
+ void stunShot()
+ void doubleDamage()
+ void growth()
+ void resetBuffs()
+ void addStatusEffect(StatusEffect)
+ boolean checkTurnStatus()
+ Projectile shoot(double,Wind,boolean)
+ {abstract}double getLaunchY()
+ {abstract}double getLaunchAngle()
+ {abstract}Image getProjectileImage()
+ {abstract}boolean isPoisonShot()
+ {abstract}boolean isStunShot()
+ double getHp()
+ void setHp(double)
+ double getMaxHp()
+ void setDead(double)
+ boolean isDead()
+ double getDamageMultiplier()
+ double getProjectileScale()
+ void setAttacking(boolean)
+ boolean isShowingDamaged()
+ ArrayList<StatusEffect> getActiveStatusEffects()
}


abstract class entity.base.StatusEffect {
# int duration
# Image icon
+ void onTurnStart(Character)
+ {abstract}void activate(Character)
+ boolean isFinished()
+ Image getIcon()
}


class entity.unit.Projectile {
- {static} double GRAVITY
- Image image
- double vx
- double vy
- double initialVx
- boolean isDestroyed
- double angleRotation
- double spinSpeed
- {static} double DEFAULT_HITBOX
- ProjectileStats stats
- Wind wind
+ Rectangle2D getHitBox()
+ boolean isIntersects(GameObject)
+ void update(double)
+ void render(GraphicsContext)
+ double getDamage()
+ int getPoisonDuration()
+ boolean isStun()
+ boolean isPoisonous()
+ double getPoisonDamage()
+ boolean isDestroyed()
+ void setDestroyed(boolean)
}


class entity.status.StunStatus {
+ void activate(Character)
+ boolean shouldSkipTurn()
}

interface entity.base.Damagedable {
~ void takeDamage(double)
}

abstract class entity.base.GameObject {
# double width
# double height
# double x
# double y
+ {abstract}Rectangle2D getHitBox()
+ boolean isIntersects(GameObject)
+ {abstract}void update(double)
+ {abstract}void render(GraphicsContext)
+ double getWidth()
+ void setWidth(double)
+ double getY()
+ void setY(double)
+ double getX()
+ void setX(double)
+ double getHeight()
+ void setHeight(double)
}


class entity.playerUnit.Onion {
- {static} Image NORMAL_IMG
- {static} Image ATTACK_IMG
- {static} Image DAMAGED_IMG
- {static} Image PROJECTILE_IMG
- boolean isPoisonShot
+ void render(GraphicsContext)
+ void takeDamage(double)
+ void toxic()
+ void growth()
+ void resetBuffs()
+ Image getProjectileImage()
+ double getLaunchY()
+ double getLaunchAngle()
+ boolean isPoisonShot()
+ boolean isStunShot()
}


class entity.unit.Wall {
+ Rectangle2D getHitBox()
+ void update(double)
+ void render(GraphicsContext)
}

class entity.status.ShieldStatus {
- double damageReduction
+ void activate(Character)
+ double getDamageReduction()
}


class entity.playerUnit.Carrot {
- {static} Image NORMAL_IMG
- {static} Image ATTACK_IMG
- {static} Image DAMAGED_IMG
- {static} Image PROJECTILE_IMG
- boolean isStunShot
+ void render(GraphicsContext)
+ void stunShot()
+ void doubleDamage()
+ void resetBuffs()
+ Image getProjectileImage()
+ double getLaunchY()
+ double getLaunchAngle()
+ boolean isPoisonShot()
+ boolean isStunShot()
}


class entity.unit.ProjectileStats {
- double damage
- double scale
- boolean isPoisonous
- boolean isStun
- int poisonDuration
- double poisonDamage
+ double getDamage()
+ double getScale()
+ boolean isPoisonous()
+ boolean isStun()
+ int getPoisonDuration()
+ double getPoisonDamage()
}


class entity.status.ToxicStatus {
- double damagePerTurn
- boolean isFresh
+ void activate(Character)
}




entity.base.Damagedable <|.. entity.base.Character
entity.base.GameObject <|-- entity.base.Character
entity.base.GameObject <|-- entity.unit.Projectile
entity.base.StatusEffect <|-- entity.status.StunStatus
entity.base.Character <|-- entity.playerUnit.Onion
entity.base.GameObject <|-- entity.unit.Wall
entity.base.StatusEffect <|-- entity.status.ShieldStatus
entity.base.Character <|-- entity.playerUnit.Carrot
entity.base.StatusEffect <|-- entity.status.ToxicStatus
@enduml